Fixed bug in report.html where button was not centered
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/kettl-fault-localization@33045 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/core/counterexample/report.css
+++ b/src/org/sosy_lab/cpachecker/core/counterexample/report.css
@@ -303,6 +303,12 @@ input:checked+.slider:before {
 	justify-content:space-between; 
 }
 
+.horizontal-div-center {
+    display: block;
+    margin-left: auto;
+	margin-right: auto 
+}
+
 #hint-list {
 	list-style-type: none;
 	counter-reset: elementcounter;
